# testops

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.dependencies  README.md  constants.py  docker-compose.yml  helpers.py  logger.py  pyproject.toml  run.py  testcase_helpers.py
app/: __init__.py  clients.py  config.py  errors.py  method_override.py  models.py  routes.py
helpers/: allure_utils.py  testcase_attachment_helpers.py  testcase_helpers.py  testcase_page_helpers.py  testrun_helpers.py
instance/: testops.db
magrations/versions/: 0001_create_test_cases_models.py
migrations/versions/: 0001_create_test_cases_models.py  0002_create_attachments_table.py  0003_add_stand_to_testrun.py  0004_add_is_deleted_to_tags.py  56f7f7040740_cinitail_migration.py
minio-data/.minio.sys/: format.json
static/js/: reports.js  test_cases.js
static/js/common/: api.js  namespace.js  toast.js  utils.js
static/js/testcases/: attachments.js  detail.js  filters.js  forms.js  init.js  pagination.js  steps.js
templates/: base.html  index.html  reports.html  test_cases.html
templates/errors/: 400.html  401.html  403.html  404.html  405.html  408.html  410.html  415.html  429.html  500.html  502.html  503.html  504.html  generic.html
templates/partials/: testcase_detail.html
